# blog_examples

./: README.md
.github/workflows/: run_tests.yml
ci_tests/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
ci_tests/.github/workflows/: run_tests.yml
ci_tests/.localstack/: create_dynamodb_table.sh
ci_tests/src/: get_long_string.py  text_manipulator.py  text_reverter.py
ci_tests/tests/: test_string_reverter.py  test_text_manipulator.py
lambda_multiple_environments/: README.md  packaged.yaml  samconfig.toml  template.yaml
lambda_multiple_environments/src/: app.py
managing_project_dependencies_with_poetry/: pyproject.toml
use_pytest_to_test_your_code/: remove_duplicates.py  test_duplicate_remover.py  test_remove_duplicates.py
use_pytest_to_test_your_code/src/: duplicate_remover.py
using_docker_to_run_your_python_tests/: Dockerfile  pyproject.toml
using_docker_to_run_your_python_tests/src/: calculate_date_difference.py
using_docker_to_run_your_python_tests/tests/: test_calculate_date_difference.py
using_pytest_to_test_your_code/: test_duplicate_remover.py  test_remove_duplicates.py
using_pytest_to_test_your_code/tests/: test_duplicate_remover.py
