[tool.poetry]
name = "localstack-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.62"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

